src/tests/testfiles/unary-operators/types-2.txt
testfiles/unary-operators/types-2.c:3:5: error: invalid operands to logical '!' (have 'char', need 'int')
!c;
^
